open crud while running simulation